Bug 1691329 - Fix cursor capture for Windows and OS X; r=ng

This hacks around the fact we want to use desktop relative cursor position
on Linux but not on Windows and OS X. This version of the constructor has
been removed upstream, so this will need to be fixed in a different way
as part of the libwebrtc update.

Differential Revision: https://phabricator.services.mozilla.com/D107895